--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
+<div><h2>D3 Bar Chart</h2></div>
 <div id="container">
-
 </div>
 
 <script src="js/main.js" type="application/javascript"></script>
